--- a/aop/pom.xml
+++ b/aop/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>webFlux</artifactId>
+    <artifactId>aop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>webFlux</name>
-    <description>webFlux</description>
+    <name>aop</name>
+    <description>aop</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -21,19 +21,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-webflux</artifactId>
-        </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
         </dependency>
     </dependencies>
 
