--- a/mybatis/pom.xml
+++ b/mybatis/pom.xml
@@ -38,6 +38,31 @@
             <artifactId>dom4j</artifactId>
             <version>2.1.3</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/cn.smallbun.screw/screw-core -->
+        <dependency>
+            <groupId>cn.smallbun.screw</groupId>
+            <artifactId>screw-core</artifactId>
+            <version>1.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>3.4.5</version>
+        </dependency>
+        <!--mysql driver-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.20</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/group.springframework.plugin/screw-extension -->
+        <dependency>
+            <groupId>group.springframework.plugin</groupId>
+            <artifactId>screw-extension</artifactId>
+            <version>0.0.1</version>
+        </dependency>
+
 
     </dependencies>
 
