--- a/webService/pom.xml
+++ b/webService/pom.xml
@@ -5,14 +5,14 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.0.1</version>
+        <version>3.0.2</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>io</artifactId>
+    <artifactId>webService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>io</name>
-    <description>io</description>
+    <name>webService</name>
+    <description>webService</description>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -26,15 +26,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-web</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>30.1.1-jre</version>
         </dependency>
     </dependencies>
 
